fixed fullscreen on mobile

--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -8,13 +8,14 @@
   overflow: hidden;
 }
 
-body {
+.wrap{
   --background-color: rgb(0, 195, 255);
   --gradient-color-1: rgb(0, 195, 255);
   --gradient-color-2: rgb(0, 119, 255);
 
   --line-color: var(--background-color);
   --foreground-color: #0011ff;
+  z-index: -1;
 
   background: linear-gradient(var(--gradient-color-2) 0%,
       var(--line-color) 50%,
